Finished server side Shopping list and Template logic
Co-authored-by: Nicholas Gilbertson <gilb0578@morris.umn.edu>

Worked with #41 #34 #35 #31 & #25